cabal-version: 3.0

name: block-chain
version: 0.0.0.0

common base
    default-language: GHC2021
    ghc-options: -Wall
    default-extensions:
        BlockArguments
        DataKinds
        DerivingStrategies
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies
    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0
      , bytestring ^>= 0.11.4
      , containers ^>= 0.6.5
      , hedgehog ^>= 1.2
      , integer-types ^>= 0.0
      , mtl ^>= 2.3.1
      , optics ^>= 0.4.2
      , quaalude ^>= 0.0
      , supply-chain ^>= 0.0
      , supply-monitor ^>= 0.0
      , supply-next == 0.0.1.*
      , supply-pushback ^>= 0.0
      , text ^>= 1.2.4 || ^>= 2.0

library
    import: base
    hs-source-dirs: block-chain
    exposed-modules:
        Cursor.Interface
        Cursor.Interface.Type
        Cursor.Interface.Class
        Cursor.Interface.Orders

        Cursor.Advancement
        Cursor.Advancement.Type
        Cursor.Advancement.Utilities

        Cursor.Feed.Type
        Cursor.Feed.Examples
        Cursor.Feed.Examples.Pushback

        Cursor.Transcoder
        Cursor.Transcoder.Type
        Cursor.Transcoder.Examples
        Cursor.Transcoder.Usage

        Cursor.Reader.Type
        Cursor.Reader.Examples
        Cursor.Reader.Examples.AmountRemaining
        Cursor.Reader.Examples.Take
        Cursor.Reader.Utilities
        Cursor.Reader.Utilities.LookAhead
        Cursor.Reader.Utilities.With

        Cursor.Atom
        Cursor.Atom.Type
        Cursor.Atom.Examples
        Cursor.Atom.Utilities

test-suite test-block-chain
    import: base
    type: exitcode-stdio-1.0
    default-extensions:
        OverloadedStrings
    hs-source-dirs: test-block-chain
    main-is: Main.hs
    build-depends:
      , block-chain
      , block-gen
      , block-text
      , hspec
      , hspec-hedgehog
