cabal-version: 3.0

name: block-class
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

extra-source-files: *.md

common base
    default-language: GHC2021
    ghc-options: -Wall -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        DerivingStrategies
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        ViewPatterns

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , integer-types ^>= 0.1.0
      , quaalude ^>= 0.0.0

library
    import: base
    hs-source-dirs: block-class
    exposed-modules:
        Block.Class

        Block.Class.Utilities

        Block.Class.Block
        Block.Class.Block.Class

        Block.Class.Classes
        Block.Class.ClassNames

        Block.Class.Refined
        Block.Class.Refined.Class
        Block.Class.Refined.Utilities

        Block.Class.ItemEquivalence
        Block.Class.ItemEquivalence.Types
        Block.Class.ItemEquivalence.Examples

        Block.Class.Singleton
        Block.Class.Singleton.Class
        Block.Class.Singleton.Types
        Block.Class.Singleton.Utilities

        Block.Class.Positional
        Block.Class.Positional.Class
        Block.Class.Positional.Types
        Block.Class.Positional.Utilities

        Block.Class.Search
        Block.Class.Search.Class
        Block.Class.Search.Types
        Block.Class.Search.Utilities

        Block.Class.Construct
        Block.Class.Construct.Class

        Block.Class.End

        Block.Class.Shortfall

        Block.Class.State
        Block.Class.State.Types
        Block.Class.State.Utilities

        Block.Class.Index
        Block.Class.Index.Class

        Block.Class.Concat
        Block.Class.Concat.Class

        Block.Class.Enumerate
        Block.Class.Enumerate.Class

        Block.Class.ItemEquality
        Block.Class.ItemEquality.Class
        Block.Class.ItemEquality.Utilities

test-suite test-block-class
    import: base
    type: exitcode-stdio-1.0
    default-extensions: OverloadedStrings
    hs-source-dirs: test-block-class
    main-is: Main.hs
    build-depends:
      , block-class
      , hspec ^>= 2.10.9
