cabal-version: 3.0

name: block-class
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

extra-source-files: *.md

common base
    default-language: GHC2021
    ghc-options: -Wall -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        DerivingStrategies
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        ViewPatterns

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , gambler ^>= 0.4.0
      , integer-types ^>= 0.1.0
      , quaalude ^>= 0.0.0

library
    import: base
    hs-source-dirs: block-class
    exposed-modules:
        Block.Class
        Block.End
        Block.Shortfall
        Block.State

test-suite test-block-class
    import: base
    type: exitcode-stdio-1.0
    default-extensions: OverloadedStrings
    hs-source-dirs: test-block-class
    main-is: Main.hs
    build-depends:
      , block-class
      , hspec ^>= 2.10.9
