cabal-version: 3.0

name: block-hedgehog
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

common base
    default-language: GHC2021

    ghc-options:
        -Wall
        -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        DataKinds
        DerivingStrategies
        FunctionalDependencies
        ImpredicativeTypes
        LambdaCase
        NoImplicitPrelude
        NoMonomorphismRestriction
        PatternSynonyms
        TypeFamilies
        ViewPatterns

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0
      , containers
      , hedgehog
      , hspec
      , hspec-hedgehog
      , integer-types ^>= 0.1
      , ListLike
      , quaalude ^>= 0.0

library
    import: base
    hs-source-dirs: block-hedgehog
    exposed-modules:
        Block.Hedgehog.Gen.Shatter
        Block.Hedgehog.Spec.Singleton
