cabal-version: 3.0

name: block-hedgehog
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

common base
    default-language: GHC2021
    ghc-options: -Wall -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        LambdaCase
        NoImplicitPrelude
        OverloadedLists

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0.0
      , containers ^>= 0.6.5
      , hedgehog ^>= 1.2
      , hspec ^>= 2.10.9
      , hspec-hedgehog ^>= 0.0.1
      , integer-types ^>= 0.1.0
      , quaalude ^>= 0.0.0

library
    import: base
    hs-source-dirs: block-hedgehog
    exposed-modules:
        Block.Hedgehog.Gen.End
        Block.Hedgehog.Gen.Shatter
        Block.Hedgehog.Gen.Positive

        Block.Hedgehog.Spec
        Block.Hedgehog.Spec.Block
        Block.Hedgehog.Spec.Concat
        Block.Hedgehog.Spec.Enumerate
        Block.Hedgehog.Spec.Index
        Block.Hedgehog.Spec.NonEmptyIso
        Block.Hedgehog.Spec.Positional
        Block.Hedgehog.Spec.Refined
        Block.Hedgehog.Spec.Search
        Block.Hedgehog.Spec.Singleton

test-suite test-block-hedgehog
    import: base
    type: exitcode-stdio-1.0
    default-extensions:
        OverloadedStrings
    hs-source-dirs: test-block-hedgehog
    main-is: Main.hs
    build-depends:
      , block-hedgehog
      , hedgehog
      , hspec
      , hspec-hedgehog
