cabal-version: 3.0

name: block-listlike
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

common base
    default-language: GHC2021

    ghc-options:
        -Wall
        -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        DataKinds
        DerivingStrategies
        FunctionalDependencies
        ImpredicativeTypes
        LambdaCase
        NoImplicitPrelude
        NoMonomorphismRestriction
        PatternSynonyms
        TypeFamilies
        ViewPatterns

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0
      , integer-types ^>= 0.0
      , ListLike ^>= 4.7.8
      , quaalude ^>= 0.0

library
    import: base
    hs-source-dirs: block-listlike
    exposed-modules:
        Block.ListLike
        Block.ListLike.Type
        Block.ListLike.Unsafe
