cabal-version: 3.0

name: block-types
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

common base
    default-language: GHC2021

    ghc-options:
        -Wall
        -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        DataKinds
        DerivingStrategies
        FunctionalDependencies
        ImpredicativeTypes
        LambdaCase
        NoImplicitPrelude
        NoMonomorphismRestriction
        PatternSynonyms
        TypeFamilies
        ViewPatterns
        BlockArguments
        DataKinds
        DerivingStrategies
        FunctionalDependencies
        ImpredicativeTypes
        LambdaCase
        NoImplicitPrelude
        NoMonomorphismRestriction
        PatternSynonyms
        TypeFamilies
        ViewPatterns

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0
      , bytestring ^>= 0.11.4
      , containers ^>= 0.6.5
      , integer-types ^>= 0.1
      , quaalude ^>= 0.0
      , text ^>= 1.2.4 || ^>= 2.0

library
    import: base
    hs-source-dirs: block-types
    exposed-modules:
        Block.Sequence
        Block.Sequence.Type
        Block.Sequence.Internal

        Block.BlockBlock
        Block.BlockBlock.Type

        Block.ByteString
        Block.ByteString.Type
        Block.ByteString.Internal

        Block.Text
        Block.Text.Type
        Block.Text.Equivalence
        Block.Text.Internal

    other-modules:
        Block.ListLike.Internal
