cabal-version: 3.0

name: block-types
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

common base
    default-language: GHC2021

    ghc-options:
        -Wall
        -Wmissing-deriving-strategies

    default-extensions:
        BlockArguments
        DataKinds
        DerivingVia
        FunctionalDependencies
        ImpredicativeTypes
        LambdaCase
        NoImplicitPrelude
        NoMonomorphismRestriction
        PatternSynonyms
        TypeFamilies
        ViewPatterns

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0.0
      , bytestring ^>= 0.11.4
      , containers ^>= 0.6.5
      , gambler ^>= 0.1.0
      , integer-types ^>= 0.1.0
      , quaalude ^>= 0.0.0
      , text ^>= 1.2.4 || ^>= 2.0
      , transformers ^>= 0.5.6

library
    import: base
    hs-source-dirs: block-types
    exposed-modules:

        Block.BlockBlock
        Block.BlockBlock.Type

        Block.ByteString
        Block.ByteString.Type

        Block.Null
        Block.Null.Class
        Block.Null.Type

        Block.Sequence
        Block.Sequence.Type

        Block.Text
        Block.Text.Type
        Block.Text.Equivalence

test-suite test-block-types
    import: base
    type: exitcode-stdio-1.0
    default-extensions:
        OverloadedStrings
    hs-source-dirs: test-block-types
    main-is: Main.hs
    build-depends:
      , block-hedgehog ^>= 0.0.0
      , block-types
      , hedgehog
      , hspec
      , hspec-hedgehog
