cabal-version: 3.0

name: block
version: 0.0.0.0

license: Apache-2.0
license-file: license.txt

extra-source-files: *.md

common base
    default-language: GHC2021
    ghc-options: -Wall
    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class == 0.0.0.*
      , block-types == 0.0.0.*

library
    import: base
    default-extensions: NoImplicitPrelude
    hs-source-dirs: block
    exposed-modules: Block

test-suite tutorial
    import: base
    type: exitcode-stdio-1.0
    default-extensions: OverloadedStrings
    hs-source-dirs: tutorial
    main-is: Main.hs
    build-depends: block
