cabal-version: 3.0

name: integer-types
version: 0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: integer-types

    default-extensions:
        NoImplicitPrelude
        PatternSynonyms

    build-depends:
        base

    exposed-modules:
        Integer
        Integer.Positive
        Integer.Positive.Unsafe
        Integer.Sign
        Integer.Signed
