cabal-version: 3.0

name: integer-types
version: 0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: integer-types

    default-extensions:
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternSynonyms

    build-depends:
        base

    exposed-modules:
        Integer
        Integer.Conversion
        Integer.Integer
        Integer.Natural
        Integer.Positive
        Integer.Positive.Unsafe
        Integer.Sign
        Integer.Signed
