cabal-version: 3.0

name: integer-types
version: 0

extra-doc-files: readme.md changelog.md

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: integer-types

    default-extensions:
        MultiParamTypeClasses
        NoGeneralizedNewtypeDeriving
        NoImplicitPrelude
        PatternSynonyms

    build-depends:
        base

    exposed-modules:
        Integer
        Integer.Conversion
        Integer.Integer
        Integer.Natural
        Integer.Positive
        Integer.Sign
        Integer.Signed
        Integer.Subtraction

    other-modules:
        Integer.Positive.Unsafe
