cabal-version: 3.0

name: step
version: 0

license: Apache-2.0
license-file: license.txt

extra-doc-files: graphics/**/*.svg

common base
    default-language: GHC2021
    ghc-options:
        -Wall
        -fdefer-typed-holes
        -Wmissing-deriving-strategies

    -- Temporary for early stage development
    ghc-options: -fno-warn-unused-imports
    ghc-options: -fno-warn-missing-signatures
    ghc-options: -fno-warn-typed-holes

    default-extensions:
        BlockArguments
        DataKinds
        DerivingVia
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        QualifiedDo
        TypeFamilies
        UndecidableInstances
        ViewPatterns

    build-depends:
        text
      , loc
      , nat-optics
      , optics
      , base
      , containers
      , hedgehog ^>= 1.1
      , ListLike
      , supply-chain
      , mtl
      , transformers

library
    import: base

    hs-source-dirs: step

    exposed-modules:
        Step.Do

        Step.Action
        Step.Action.Core
        Step.Action.Types

        Step.Chunk
        Step.Chunk.Gen
        Step.Chunk.ListLike
        Step.Chunk.ListLike.Core
        Step.Chunk.Text
        Step.Chunk.Text.Core

        Step.Interface
        Step.Interface.Core

        Step.Walk

        Step.Error

        Step.Package.AttoparsecText
        Step.Package.Document
        Step.Package.General
        Step.Package.InMemory

test-suite test-step
    import: base
    default-extensions:
        OverloadedStrings
        TemplateHaskell
    type: exitcode-stdio-1.0
    hs-source-dirs: test-step
    main-is: Main.hs
    build-depends:
        step
      , tasty
      , tasty-hedgehog
      , tasty-hunit
      , text
    other-modules:
        Step.Package.InMemory.Spec
