cabal-version: 3.0

name: step
version: 0

license: Apache-2.0
license-file: license.txt

extra-doc-files: graphics/**/*.svg

common base
    default-language: GHC2021
    ghc-options:
        -Wall
        -fdefer-typed-holes
        -Wmissing-deriving-strategies

    -- Temporary for early stage development
    -- ghc-options: -fno-warn-unused-imports
    ghc-options: -fno-warn-missing-signatures
    -- ghc-options: -fno-warn-typed-holes

    default-extensions:
        BlockArguments
        DataKinds
        DerivingVia
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        QualifiedDo
        TypeFamilies
        UndecidableInstances
        ViewPatterns

    build-depends:
      , base
      , block-class
      , block-text
      , containers
      , hedgehog ^>= 1.1
      , integer-types
      , ListLike
      , loc
      , mtl
      , optics
      , quaalude ^>= 0.0
      , supply-chain ^>= 0.0
      , supply-chain-interfaces
      , supply-chain-parsing
      , supply-next ^>= 0.0.1
      , text
      , transformers

library
    import: base

    hs-source-dirs: step

    exposed-modules:
        Step.Do

        Step.Action
        Step.Action.Core
        Step.Action.Types

        Step.Buffer.Buffer
        Step.Buffer.Double
        Step.Buffer.Private
        Step.Buffer.State

        Step.Interface
        Step.Interface.Core

        Step.LeftRight

        Step.Package.AttoparsecText
        Step.Package.Characters
        Step.Package.Document
        Step.Package.End
        Step.Package.Failure
        Step.Package.FixedLength
        Step.Package.General
        Step.Package.Match
        Step.Package.InMemory
        Step.Package.ParticularText
        Step.Package.Some

test-suite test-step
    import: base
    default-extensions:
        OverloadedStrings
        TemplateHaskell
    type: exitcode-stdio-1.0
    hs-source-dirs: test-step
    main-is: Main.hs
    build-depends:
      , block-gen
      , step
      , tasty
      , tasty-hedgehog
      , tasty-hunit
      , text
    other-modules:
        Step.Spec.Characters
        Step.Spec.FixedLength
        Step.Spec.Match
        Step.Spec.ParticularText
