cabal-version: 3.0

name: stratoparsec
version: 0

common base
    default-language: Haskell2010
    ghc-options: -Wall -fdefer-typed-holes
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        ConstraintKinds
        DeriveFunctor
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        LambdaCase
        GADTs
        GeneralizedNewtypeDeriving
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        TypeApplications
        TypeFamilies
        ViewPatterns
    build-depends:
        base
      , bytestring
      , containers
      , list-transformer
      , mono-traversable ^>= 1.0
      , relude
      , text
    mixins:
        base (Data.Char as Char, Data.Word as Word, Text.Show as Show, Control.Monad as Monad)
      , bytestring (Data.ByteString as ByteString, Data.ByteString.Lazy as LByteString)
      , containers (Data.Set as Set, Data.Map.Strict as Map, Data.Sequence as Seq)
      , list-transformer (List.Transformer as ListT)
      , mono-traversable (Data.MonoTraversable as Mono)
      , relude (Relude as Prelude)
      , text (Data.Text as Text, Data.Text.Lazy as LText)

library
    import: base
    hs-source-dirs: library/stratoparsec
    exposed-modules:
        Stratoparsec
        Stratoparsec.Buffer
        Stratoparsec.Stream
        Stratoparsec.Stream.State
    other-modules:
        Stratoparsec.Util.Modify
        Stratoparsec.Util.While
