cabal-version: 3.0

name: stratoparsec
version: 0

common base
    default-language: Haskell2010
    ghc-options: -Wall -fdefer-typed-holes
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        ConstraintKinds
        DeriveFunctor
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        LambdaCase
        GADTs
        GeneralizedNewtypeDeriving
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        TemplateHaskell
        TypeApplications
        TypeFamilies
        ViewPatterns
    build-depends:
        base
      , bytestring
      , containers
      , hedgehog
      , list-transformer
      , ListLike ^>= 4.7
      , optics ^>= 0.4
      , relude
      , text
    mixins:
        base (Data.Char as Char, Data.Word as Word, Text.Show as Show, Control.Monad as Monad)
      , bytestring (Data.ByteString as ByteString, Data.ByteString.Lazy as LByteString)
      , containers (Data.Set as Set, Data.Map.Strict as Map, Data.Sequence as Seq)
      , list-transformer (List.Transformer as ListT)
      , ListLike (Data.ListLike as ListLike)
      , relude (Relude as Prelude)
      , text (Data.Text as Text, Data.Text.Lazy as LText)

library
    import: base
    hs-source-dirs: library/stratoparsec
    exposed-modules:
        Stratoparsec.Buffer.Base
        Stratoparsec.Buffer.State
        Stratoparsec.Stream.Base
        Stratoparsec.Stream.State
        Stratoparsec.Document.Parser
        Stratoparsec.Document.Past
        Stratoparsec.Document.Position
        Stratoparsec.Document.Prelude
        Stratoparsec.Test.InputChunking
    other-modules:
        Stratoparsec.Util.Modify
        Stratoparsec.Util.While

test-suite test-stratoparsec
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test/test-stratoparsec
    main-is: Main.hs
    build-depends: stratoparsec, hspec, hspec-hedgehog
