cabal-version: 3.0

name: supply-chain-core
version: 0

license: Apache-2.0
license-file: license.txt

extra-doc-files: readme.md

common base
    default-language: GHC2021
    ghc-options: -Wall
    default-extensions:
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        ViewPatterns

    build-depends:
        base ^>= 4.16

library
    import: base
    hs-source-dirs: supply-chain-core
    exposed-modules:
        SupplyChain.Core.Connect
        SupplyChain.Core.Effect
        SupplyChain.Core.FreeMonad
        SupplyChain.Core.FreePointedFunctor
        SupplyChain.Core.Job
        SupplyChain.Core.Referral
        SupplyChain.Core.Types
        SupplyChain.Core.Vendor
    other-modules:
        SupplyChain.Core.VendorAndReferral

test-suite test-supply-chain-core
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test-supply-chain-core
    main-is: Main.hs
    build-depends:
        supply-chain-core
      , tasty
      , tasty-hedgehog
      , tasty-hunit
